--- a/Foodini/Foodini-Info.plist
+++ b/Foodini/Foodini-Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Elephont Light</string>
+		<string>elephont-light.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
